# CCTV_ONVIF_Autoconfig

./: README.md  pyproject.toml
Omny/: main.py
Omny/methods/get/: device_service.py
Omny/methods/set/: device_service.py
